# bigdata-storage-experiment-assignment-2024

./: .gitignore  README.md
.obsidian/: workspace.json
I202120037/: README.md
I202120037/Lab0/: README.md
I202120037/Lab1/: README.md
I202120037/Lab2/: README.md
U202110415/: README.md
U202112071/: README.md
U202112142/: README.md
U202112142/lab0/: README.md
U202112142/lab1/: README.md  benchmark.py  client.py  minIO.py
U202112142/lab2/: README.md
U202112142/lab3/: README.md
U202113863/: README.md
U202114055/: README.md
U202114055/Lab1/: readme.md
U202114055/Lab1/assets/rust_client/: Cargo.toml
U202114055/Lab1/assets/rust_client/src/: main.rs
U202114055/Lab2/: readme.md
U202114055/Lab3/: readme.md
U202115301/: README.md
U202115319/: readme.md
U202115319/Lab3/: readme.md
U202115337/: README.md
U202115337/Lab1/: README.md
U202115341/: README.md
U202115341/Lab0/: Lab0.md
U202115341/Lab1/: Lab3_README.md
U202115341/Lab2/: Lab2_README.md
U202115388/: README.md
U202115388/lab0/: README.md
U202115388/lab1/: README.md
U202115388/lab2/: README.md
U202115396/: README.md
U202115421/: README.md
U202115434/: README.md
U202115436/: README.md
U202115451/: README.md
U202115474/: README.md
U202115478/: README.md
U202115484/: README.md
U202115566/: README.md
U202115636/: README.md
U202115648/: README.md
U202115653/: README.md
U202115659/: README.md
U202115662/: README.md
U202115663/: README.md
U202115667/: README.md
U202190067/: README.md
U202190074/: README.md
u202115380/: README.md
(+165 files in other folders)
